fix spacing

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a{color:inherit;text-decoration:none}
     flex-direction:column;
     align-items:center;
     justify-content:center;
-    gap:6rem;
+    gap:7rem;
     padding:6rem 1.5rem 1rem;
 }
 .about-content{
@@ -136,6 +136,5 @@ a{color:inherit;text-decoration:none}
 @media(min-width:640px){
     .sm\:text-7xl{font-size:4.5rem;line-height:1}
     .sm\:text-xl{font-size:1.25rem;line-height:1.75rem}
-    .about-main{gap:24rem}
     .about-cheese-video{width:500px;height:500px}
 }
